CMakeTemplateProject/errors.txt
In file included from /home/jacco/Documents/Git/AdvancedProgramming/CMakeTemplateProject/include/PointOfInterest.cpp:1:0:
/home/jacco/Documents/Git/AdvancedProgramming/CMakeTemplateProject/include/PointOfInterest.h: In constructor ‘PointOfInterest::PointOfInterest(Position, pointOfInterestType, bool)’:
/home/jacco/Documents/Git/AdvancedProgramming/CMakeTemplateProject/include/PointOfInterest.h:15:22: warning: ‘PointOfInterest::type’ will be initialized after [-Wreorder]
  pointOfInterestType type;
                      ^~~~
/home/jacco/Documents/Git/AdvancedProgramming/CMakeTemplateProject/include/PointOfInterest.h:14:7: warning:   ‘bool PointOfInterest::isObstacle’ [-Wreorder]
  bool isObstacle;
       ^~~~~~~~~~
/home/jacco/Documents/Git/AdvancedProgramming/CMakeTemplateProject/include/PointOfInterest.cpp:9:1: warning:   when initialized here [-Wreorder]
 PointOfInterest::PointOfInterest(Position pos, pointOfInterestType type, bool obstacle) : position(pos), type(type), isObstacle(obstacle) {
 ^~~~~~~~~~~~~~~
/home/jacco/Documents/Git/AdvancedProgramming/CMakeTemplateProject/include/Menu.cpp: In function ‘size_t MenuUserInput(std::__cxx11::string, size_t, size_t)’:
/home/jacco/Documents/Git/AdvancedProgramming/CMakeTemplateProject/include/Menu.cpp:182:24: error: ‘numeric_limits’ is not a member of ‘std’
   std::cin.ignore(std::numeric_limits<std::streamsize>::max(), '\n');
                        ^~~~~~~~~~~~~~
/home/jacco/Documents/Git/AdvancedProgramming/CMakeTemplateProject/include/Menu.cpp:182:54: error: expected primary-expression before ‘>’ token
   std::cin.ignore(std::numeric_limits<std::streamsize>::max(), '\n');
                                                      ^
/home/jacco/Documents/Git/AdvancedProgramming/CMakeTemplateProject/include/Menu.cpp:182:57: error: ‘::max’ has not been declared
   std::cin.ignore(std::numeric_limits<std::streamsize>::max(), '\n');
                                                         ^~~
/home/jacco/Documents/Git/AdvancedProgramming/CMakeTemplateProject/include/Menu.cpp:182:57: note: suggested alternative:
In file included from /usr/include/c++/7/bits/char_traits.h:39:0,
                 from /usr/include/c++/7/ios:40,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from /home/jacco/Documents/Git/AdvancedProgramming/CMakeTemplateProject/include/Menu.h:4,
                 from /home/jacco/Documents/Git/AdvancedProgramming/CMakeTemplateProject/include/Menu.cpp:1:
/usr/include/c++/7/bits/stl_algobase.h:265:5: note:   ‘std::max’
     max(const _Tp& __a, const _Tp& __b, _Compare __comp)
     ^~~
CMakeFiles/PathPlanner.dir/build.make:254: recipe for target 'CMakeFiles/PathPlanner.dir/include/Menu.cpp.o' failed
make[2]: *** [CMakeFiles/PathPlanner.dir/include/Menu.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
CMakeFiles/Makefile2:67: recipe for target 'CMakeFiles/PathPlanner.dir/all' failed
make[1]: *** [CMakeFiles/PathPlanner.dir/all] Error 2
